create search button and its card

--- a/artifacts/templates/show_artifact_for_user.html
+++ b/artifacts/templates/show_artifact_for_user.html
@@ -138,7 +138,7 @@
 
             {% endfor %}
 
-            <input type="submit" class="submit-btn submit-btn--centered" value="Enviar Comentário">
+            <input type="submit" class="btn-submit btn--blue" value="Enviar Comentário">
         </form>
     </section>
 
