--- a/core/static/sass/appp.scss
+++ b/core/static/sass/appp.scss
@@ -5,41 +5,46 @@
 
 //$ctn-hor-padding: 1em;
 
-@import "variables";
-
-html,body, h1,h2,h3,h4,h5,h6{
+html, body, h1, h2, h3, h4, h5, h6 {
   overflow-x: hidden;
   color: #fff;
   margin: 0;
   padding: 0;
   font-family: "Arvo", serif;
-  /* Adjust font size */
-    font-size: 100%;
-    -webkit-text-size-adjust: 100%;
-    /* Font varient */
-    font-variant-ligatures: none;
-    -webkit-font-variant-ligatures: none;
-    /* Smoothing */
-    text-rendering: optimizeLegibility;
-    -moz-osx-font-smoothing: grayscale;
-    font-smoothing: subpixel-antialised;
-    -webkit-font-smoothing: antialiased;
-    text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+  font-variant-ligatures: none;
+  -webkit-font-variant-ligatures: none;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  font-smoothing: subpixel-antialised;
+  -webkit-font-smoothing: antialiased;
+  text-shadow: rgba(0, 0, 0, .01) 0 0 1px;
 }
 
-body{
+body {
   position: relative;
 }
 
-a, a:hover{
+a, a:hover {
   color: white;
   text-decoration: none;
 }
 
-*{ // temporário
-  word-wrap: break-word;
+.dimmer {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 101;
+  opacity: 0;
+  will-change: opacity;
+  pointer-events: none;
 }
 
+@import "variables";
 @import "queries";
 @import "container";
 @import "header";
@@ -47,5 +52,6 @@ a, a:hover{
 @import "img";
 @import "card";
 @import "form";
+@import "button";
 @import "positioning";
 @import "helpers";
