--- a/artisans/templates/list_artisan_for_user.html
+++ b/artisans/templates/list_artisan_for_user.html
@@ -16,7 +16,7 @@
                                    placeholder="Pesquise artesões">
                         </div>
 
-                        <input type="submit" class="btn-submit btn-submit--bright-brown inline-block m-l-2"
+                        <input type="submit" class="btn-submit btn--bright-brown inline-block m-l-2"
                                value="Pesquisar">
                     </form>
                 </div>
@@ -81,6 +81,8 @@
             </form>
         </div>
     </div>
+
+
 
 
 {% endblock %}
