--- a/core/static/sass/variables.scss
+++ b/core/static/sass/variables.scss
@@ -7,6 +7,8 @@ $blue: #01A698;
 $light-blue: #03D8BE;
 
 $ctn-hor-padding: (
+        x-small: 1em,
+        x-small-l: 1em,
         small: 1em,
         small-l: 3em,
         medium: 3em,
