--- a/artisans/templates/show_artisan_for_user.html
+++ b/artisans/templates/show_artisan_for_user.html
@@ -3,49 +3,168 @@
 {% load static %}
 
 {% block content %}
-    <div class="product">
-        <div class="container">
-            <div class="product-price1">
-                <div class="top-sing">
-                    <div class="col-md-7 single-top">
-                        <div class="flexslider">
-                            <ul class="slides">
-                                <li data-thumb="{{ artisan.photo }}" style="list-style: none">
-                                    <div class="thumb-image"> <img src="{{ artisan.photo }}" data-imagezoom="true" class="img-responsive" alt=""/> </div>
-                                </li>
-                            </ul>
-                        </div>
-                        <script src="{% static 'js/imagezoom.js' %}"></script>
-                        <script defer src="{% static 'js/jquery.flexslider.js'  %}"></script>
 
+
+
+    <section class="ctn ctn--red">
+
+
+        <h3 class="ctn__title ctn__title--centered">
+            Sobre o Artesão
+        </h3>
+
+        <div class="flex@large flex--column flex--centered">
+            <div class="f">
+                <div class="img img--centered">
+                    <div class="img__bg img__bg--yellow">
+                        <img class="img__file" src="{{ artisan.photo }}"
+                             alt="foto de {{ artisan.name }}">
                     </div>
-                    <div class="col-md-5 single-top-in simpleCart_shelfItem">
-                        <div class="single-para ">
-                            <h4>Artesao </h4>
-                            <h5 class="item_price">{{ artisan.name }}</h5>
-                            <p class="para">{{ artisan.biography }}</p>
-                            <div class="prdt-info-grid">
-                                <ul>
-                                    <li>- Email : {{ artisan.email }} </li>
-                                    <li>- Telefone : {{ artisan.phone }} </li>
-                                    <li>- Estado : {{ artisan.address.state }}</li>
-                                    <li>- Cidade : {{ artisan.address.city }}</li>
-                                    <li>- Bairro : {{ artisan.address.neighborhood }}</li>
-                                    <li>- Rua : {{ artisan.address.street }},
-                                        Nº {{ artisan.address.number }}
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="check">
-                                <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span>Cadastrado em: {{ artisan.created }}</p>
-                            </div>
-                        </div>
+                </div>
+
+                <div class="card card--full-width card--red card--centered card--rt@large">
+                    <h2 class="card__title card__content">
+                        {{ artisan.name|title }}
+                    </h2>
+                </div>
+
+                <div class="card card--red card--centered">
+                    <div class="card__content">
+                        <p>
+                            {{ artisan.biography }}
+                        </p>
                     </div>
-                    <div class="clearfix"> </div>
+                </div>
+            </div>
+
+            <div class="flex@large wt--full align-items-start justify-space-between">
+                <div class="card card--lt card--red">
+                    <div class="card__title">
+                        <span>Endereço</span>
+                    </div>
+                    <div class="card__content same-height@medium">
+                        <span>{{ artisan.address.street }}, número {{ artisan.address.number }}</span>
+                        <span>{{ artisan.address.neighborhood }}, {{ artisan.address.city }}</span>
+                    </div>
+                </div>
+
+                <div class="card card--rt card--red">
+                    <div class="card__title">
+                        <span>Contato</span>
+                    </div>
+                    <div class="card__content">
+                        <span>{{ artisan.email }}</span>
+                        <span>{{ artisan.phone }}</span>
+                    </div>
                 </div>
             </div>
 
         </div>
+    </section>
+
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+
+        <!-- Background of PhotoSwipe.
+             It's a separate element as animating opacity is faster than rgba(). -->
+        <div class="pswp__bg"></div>
+
+        <!-- Slides wrapper with overflow:hidden. -->
+        <div class="pswp__scroll-wrap">
+
+            <!-- Container that holds slides.
+                PhotoSwipe keeps only 3 of them in the DOM to save memory.
+                Don't modify these 3 pswp__item elements, data is added later on. -->
+            <div class="pswp__container">
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+            </div>
+
+            <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+            <div class="pswp__ui pswp__ui--hidden">
+
+                <div class="pswp__top-bar">
+
+                    <!--  Controls are self-explanatory. Order can be changed. -->
+
+                    <div class="pswp__counter"></div>
+
+                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+
+                    <button class="pswp__button pswp__button--share" title="Share"></button>
+
+                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+
+                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+
+                    <!-- Preloader demo http://codepen.io/dimsemenov/pen/yyBWoR -->
+                    <!-- element will get class pswp__preloader--active when preloader is running -->
+                    <div class="pswp__preloader">
+                        <div class="pswp__preloader__icn">
+                            <div class="pswp__preloader__cut">
+                                <div class="pswp__preloader__donut"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                    <div class="pswp__share-tooltip"></div>
+                </div>
+
+                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+                </button>
+
+                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+                </button>
+
+                <div class="pswp__caption">
+                    <div class="pswp__caption__center"></div>
+                </div>
+
+            </div>
+
+        </div>
+
     </div>
+
+{% endblock %}
+
+{% block custom-js %}
+    <script>
+        if ($(".img__file")) {
+            let pswpElement = document.querySelectorAll('.pswp')[0];
+            let options = {
+                // optionName: 'option value'
+                // for example:
+                index: 0 // start at first slide
+            };
+
+            $(".img__file").click(function () {
+
+                let items = [
+                    {
+                        src: $(this).attr('src'),
+                        w: $(this).width(),
+                        h: $(this).height()
+                    },
+                ];
+
+                let gallery = new PhotoSwipe(pswpElement, PhotoSwipeUI_Default, items, options);
+                gallery.init();
+            });
+        }
+
+
+        {#// build scene#}
+        {#let controller = new ScrollMagic.Controller();#}
+        {#let scene = new ScrollMagic.Scene({triggerElement: ".craft__img", duration: 700})#}
+        {#// animate color and top border in relation to scroll position#}
+        {#    .setTween(".craft__img", {transform: "translateX(-30px)"}) // the tween durtion can be omitted and defaults to 1#}
+        {#    .addIndicators({name: "2 (duration: 300)"}) // add indicators (requires plugin)#}
+        {#    .addTo(controller);#}
+    </script>
+
+
 
 {% endblock %}
