--- a/core/static/sass/container.scss
+++ b/core/static/sass/container.scss
@@ -1,5 +1,5 @@
 .ctn {
-  @each $query in small, small-l, medium, medium-l, large, x-large {
+  @each $query in x-small, x-small-l, small, small-l, medium, medium-l, large, x-large {
     @include to($query) {
       padding: 0.75em map_get($ctn-hor-padding, $query) 2.55em map_get($ctn-hor-padding, $query);
     }
